--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,32 @@ th[colspan].group10 {
   font-weight: bold;
 }
 
+.lataus-text {
+  font-size: 20px;
+  font-weight: bold;
+  display: inline-block;
+  animation: lataus 2s infinite ease-in-out;
+}
+
+@keyframes lataus {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  25% {
+    transform: translateY(-5px);
+    opacity: 0.5;
+  }
+  50% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  75% {
+    transform: translateY(5px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
