--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ padding: 0 2rem;
 
 .forecast-tables table {
   flex: 1;
-  min-width: 200px;
+  min-width: 150px;
 }
 
 /* Alle 1200px leveys */
@@ -144,7 +144,7 @@ padding: 0 2rem;
     font-size: medium;
   }
   .DataList h2 {
-    font-size: medium;
+    font-size: large;
   }
 }
 
